@@ -5,6 +5,9 @@ ChangeLog
 
 SVN TRUNK
 
+* Messages standard output capture has been slightly improved
+  as for non-blocking i/o, whenever available. (EXPERIMENTAL)
+
 * Adjusted configure check for libgig to detect the new includedir.
 
 * A man page has beed added (making up Matt Flax's work on
